[package]
name = "astro-assembly"
version = "1.3.0"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
astroport-governance = { path = "../../packages/astroport-governance" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
paloma-token = {git = "ssh://git@github.com/palomachain/palomaswap-amm.git"}
paloma-xastro-token = {git = "ssh://git@github.com/palomachain/palomaswap-amm.git"}
voting-escrow = { path= "../voting_escrow" }
voting-escrow-delegation = { path="../voting_escrow_delegation" }
astroport-nft = { path = "../nft"}
paloma-staking = {git = "ssh://git@github.com/palomachain/palomaswap-amm.git"}
builder-unlock = {path = "../builder_unlock" }
anyhow = "1"
